--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "webapi-utils",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Node.js / Express utilities and middlewares for Web APIs",
-  "homepage":"https://github.com/pintux/webapi-utils.git",
+  "homepage": "https://github.com/pintux/webapi-utils.git",
   "main": "index.js",
   "scripts": {
-
+    "test": "DEBUG=TESTS mocha -t 5000"
   },
   "author": "Antonio Pintus",
   "license": "MIT",
   "dependencies": {
-    "debug":"latest"
+    "debug": "latest"
   },
   "devDependencies": {
+    "supertest": "^2.0.0",
+    "unit.js": "^2.0.0"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,4 @@
     "middleware",
     "utility"
   ]
-
 }
