--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "webapi-utils",
-  "version": "1.3.0",
+  "version": "0.0.0-development",
   "description": "Node.js / Express utilities and middlewares for Web APIs",
   "homepage": "https://github.com/pintux/webapi-utils.git",
   "main": "index.js",
   "scripts": {
-    "test": "DEBUG=TESTS mocha -t 5000"
+    "test": "cd test && npm i && cd .. && ./node_modules/.bin/mocha -t 20000",
+    "cover": "./node_modules/.bin/nyc --reporter=lcov --reporter=text npm test",
+    "check-coverage": "./node_modules/.bin/nyc check-coverage --statements 90 --branches 50 --functions 100 --lines 90",
+    "precommit": "npm run cover && npm run check-coverage",
+    "commit": "./node_modules/.bin/git-cz",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "author": "Antonio Pintus",
   "license": "MIT",
@@ -13,7 +18,14 @@
     "debug": "latest"
   },
   "devDependencies": {
-    "supertest": "^2.0.0",
+    "commitizen": "^2.9.6",
+    "coveralls": "^2.13.0",
+    "cz-conventional-changelog": "^2.0.0",
+    "husky": "^0.13.3",
+    "mocha": "^3.2.0",
+    "nyc": "^10.2.0",
+    "semantic-release": "^6.3.2",
+    "supertest": "^3.0.0",
     "unit.js": "^2.0.0"
   },
   "repository": {
@@ -25,5 +37,10 @@
     "API",
     "middleware",
     "utility"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
